fixed the overflow bug when an on-screen keyboard appears on mobile devices

--- a/css/share-photos.css
+++ b/css/share-photos.css
@@ -8,12 +8,15 @@ main {
 	min-height: 371px;
 	height: 100vh;
 	width: 100%;
-	background-image: -o-linear-gradient(right, rgba(0, 0, 0, 0.233), rgba(0, 0, 0, 0.664)), url(/images/holding-photo.webp);
+	padding-top: 90px;
+
 	background-image: -webkit-gradient(linear, right top, left top, from(rgba(0, 0, 0, 0.233)), to(rgba(0, 0, 0, 0.664))), url(/images/holding-photo.webp);
 	background-image: linear-gradient(to left, rgba(0, 0, 0, 0.233), rgba(0, 0, 0, 0.664)), url(/images/holding-photo.webp);
 	background-size: cover;
-	padding-top: 90px;
+
 	color: white;
+
+	overflow: auto;
 }
 
 main>h1 {
